# FC6-Ground-Tools

./: .gitignore  README.md
docs/superpowers/plans/: 2026-04-06-operator-absent-hardening.md
docs/superpowers/specs/: 2026-04-06-operator-absent-hardening-design.md
mc6/: mercury_launch_tool_spec.md  pyproject.toml
mc6/mc6/: __init__.py  cdc.py  checkpoint.py  config_engine.py  devices.py  discovery.py  http_config.py  main.py  session_log.py  ui.py  warnings.py  weather.py  wifi.py
mc6/mc6/golden_configs/: rev2.json
mc6/tests/: test_checkpoint.py  test_config_engine.py  test_http_parser.py  test_warnings.py  test_weather.py
mercury-config/: Altimetercloud.com AltimeterAltimeter outputs.html  Altimetercloud.com AltimeterAltimeter.html  mercury_launch_tool_spec.md  pyproject.toml
mercury-config/golden_configs/: rev3.json
mercury-config/mercury_config/: __init__.py  cdc.py  checkpoint.py  config_engine.py  devices.py  discovery.py  http_config.py  main.py  session_log.py  ui.py  warnings.py  weather.py  wifi.py
mercury-config/tests/: test_checkpoint.py  test_config_engine.py  test_http_parser.py  test_warnings.py  test_weather.py
