[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mc6"
dynamic = ["version"]
description = "Mercury V1 altimeter flight configuration tool for FC6"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "pyserial>=3.5",
    "requests>=2.28",
]

[project.scripts]
mc6 = "mc6.main:main"
mercury-config = "mc6.main:main_legacy"

[tool.setuptools.packages.find]
include = ["mc6*"]

[tool.setuptools.package-data]
mc6 = ["golden_configs/*.json"]

[tool.setuptools_scm]
root = ".."
version_file = "mc6/_version.py"
