[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-config"
version = "0.1.0"
description = "Mercury V1 altimeter flight configuration tool for FC6"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyserial>=3.5",
    "requests>=2.28",
]

[project.scripts]
mercury-config = "mercury_config.main:main"

[tool.setuptools.packages.find]
include = ["mercury_config*"]
